fix: - updated the Watching page to be responsive also when your on tablet, witch before it wasn't; - undated the padding in SingleShowPage;
updated:
- Watching.tsx
- Watching.css
- SingleShowPage.tsx

--- a/src/pages/Watching/Watching.css
+++ b/src/pages/Watching/Watching.css
@@ -8,8 +8,8 @@
 /* Tablet e desktop */
 @media (min-width: 768px) {
   .episode-img-responsive {
-    width: 17rem;
-    height: 10rem;
+    width: 12rem;
+    height: 8rem;
   }
 }
 
